[package]
name = "slackr"
version = "0.0.1"
edition = "2021"
description = "Rust library or managing Slack API."
repository = "https://github.com/mnemonad/slackr"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.8", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

[[bin]]
name = "test"
path = "src/bin/slackr_test.rs"

[[bin]]
name = "init_db"
path = "src/bin/db_test.rs"
